# Lynx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: state.md
src/: Makefile  llvmheader.hpp  lynx.hpp  main.cpp
src/analyzer/: analyzer.cpp  analyzer.h  symbol.cpp  symbol.h
src/ast/: expr.cpp  expr.h  function.cpp  function.h  operation.cpp  operation.h  stmt.cpp  stmt.h
src/error/: marking.cpp  marking.hpp  subject.cpp  subject.hpp
src/examples/: decl.fux
src/generator/: generator.hpp
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: parser.cpp  parser.h  type.cpp  type.h  value.cpp  value.h
src/util/: io.cpp  io.h
